@@ -49,6 +49,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   permissions, just as before.
 * (bug 8567) Added hook RawPageViewBeforeOutput just before the text is blown out in action=raw,
              so extensions might influence the output.
+* Correct tooltip accesskey hint for Opera on the Macintosh (it uses Shift-Esc-, not Ctrl-).
 
 == Languages updated ==
 
